--- a/style.css
+++ b/style.css
@@ -63,10 +63,30 @@ body {
 }
 .content {
     background-color: #f8f8fa;
-    min-height: 300px;
-    padding: 20px;
+    height: 300px;
+
+    padding-left: 20px;
+    padding-bottom: 20px;
     font-family: Arial,Helvetica,Verdana,sans-serif;
     font-size: 15px;
+}
+.caixapre{
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    display: flex;
+    padding: 0px;
+   
+
+}
+
+.content form label{
+    margin-right:10px;
+    font-size: 12px;
+    
+}
+.content form font{
+    font-size: 12px;
 }
 .caixaTexto{
     width: 80%;
